# kustomize-wireguard-sidecar

./: .gitignore  README.md  kustomization.yaml
examples/hello-world/: cronjob.yaml  deployment.yaml  kustomization.yaml  service.yaml
examples/selenium/: kustomization.yaml  namespace.yaml  selenium-values.yaml
examples/selenium/testing/: flake.nix  main.py  pyproject.toml
patches/: cronjob-init.yaml  cronjob-sidecar.yaml  cronjob.yaml  deployment-init.yaml  deployment.yaml  statefulset-init.yaml  statefulset.yaml
patches/cronjob/: sidecar.yaml
patches/deployment/: sidecar.yaml
patches/statefulset/: init.yaml  sidecar.yaml
wireguard-sidecar/: deployment-init.yaml  kustomization.yaml  sidecar.yaml  statefulset-init.yaml
